# MiniRysV4GlobalLocalization

./: CMakeLists.txt  README.md  blackfly.sh  package.xml
src/: camera_test.cpp  detection_consistency_test.cpp  detection_test.cpp  fix_distortion_test.cpp  global_localization.cpp  live_detection_test.cpp
srv/: GetMinirysGlobalLocalization.srv
yaml/: global_localization_params.yaml  pointgrey_camera_calibration.yml
